[package]
name = "cobweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
enum-kinds = "0.5.1"
futures = "0.3.28"
itertools = "0.12.0"
log = { version = "0.4.20", features = ["serde", "std"] }
ouroboros = "0.18.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
static_assertions = "1.1.0"
stridul = { path = "../stridul" }
tokio = { version = "1.32.0", features = ["net", "rt"] }
tokio-util = { version = "0.7.8", features = ["io"] }
