[package]
name = "honeybee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
cobweb = { version = "0.1.0", path = "../cobweb" }
flume = "0.11.0"
futures = "0.3.29"
log = "0.4.20"
ran = "1.1.5"
rand = "0.8.5"
static_assertions = "1.1.0"
stridul = { version = "0.1.0", path = "../stridul" }
tokio = { version = "1.35.0", features = ["net"] }
