[package]
name = "stridul"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
flume = "0.11.0"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["net", "bytes", "macros", "time"] }
tokio-util = "0.7.8"
