[package]
name = "stridul"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
derivative = "2.2.0"
flume = "0.11.0"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
static_assertions = "1.1.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["net", "bytes", "macros", "time", "io-util"] }
tokio-util = "0.7.8"

[dev-dependencies]
env_logger = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
